--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 class="text-center">Welcome to Calculate me!</h1>
+  <h1 class="heading">Welcome to Calculate me!</h1>
   <div class="container">
     <div class="row">
       <input class="input" type="text"/>
